--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,8 @@
     android:orientation="vertical"
     android:gravity="center">
 
+    <!--hello-->
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
