--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="cyan">#48CFCB</color>
-    <color name="dark_cyan">#229799</color>
+    <color name="cyan">#1A7FD0</color>
+    <color name="dark_cyan">#FF5722</color>
     <color name="gray">#424242</color>
 </resources>
